--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ script:
 deploy:
   provider: pages
   skip_cleanup: true
-  github_token: "162ffde826949f4aca4a6450ae48dd5d9f3638bd"
+  github_token: 162ffde826949f4aca4a6450ae48dd5d9f3638bd
   local_dir: dist
   on:
     branch: master
