--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-markdown": "^4.0.8",
-    "react-router-dom": "^5.0.0"
+    "react-router-dom": "^5.0.0",
+    "sockjs-client": "^1.3.0"
   }
 }
