--- a/package.json
+++ b/package.json
@@ -61,10 +61,12 @@
     "ag-grid-react": "^20.2.0",
     "antd": "^3.16.3",
     "lodash": "^4.17.11",
+    "net": "^1.0.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-markdown": "^4.0.8",
     "react-router-dom": "^5.0.0",
-    "sockjs-client": "^1.3.0"
+    "sockjs-client": "^1.3.0",
+    "stompjs": "^2.3.3"
   }
 }
