--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "订单管理系统前端。Order Management System Frontend.",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 0",
+    "test": "jest --config jestconfig.json",
     "build": "webpack --config webpack.prod.js",
     "watch": "webpack --watch --config webpack.dev.js",
     "start": "webpack-dev-server --open  --config webpack.dev.js",
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
+    "@types/jest": "^24.0.13",
     "@types/lodash": "^4.14.123",
     "@types/markdown-to-jsx": "^6.9.0",
     "@types/node": "^11.13.4",
@@ -36,6 +37,7 @@
     "favicons-webpack-plugin": "0.0.9",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.8.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "markdown-to-jsx": "^6.9.4",
@@ -44,6 +46,7 @@
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
     "ts-import-plugin": "^1.5.5",
+    "ts-jest": "^24.0.2",
     "ts-loader": "^5.3.3",
     "typescript": "^3.4.3",
     "webpack": "^4.30.0",
