--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "oms-frontend",
-  "version": "1.0.0",
+  "name": "qbit",
+  "version": "1.1.0",
   "description": "订单管理系统前端。Order Management System Frontend.",
   "scripts": {
     "test": "jest --config jestconfig.json",
